[gd_scene load_steps=9 format=3 uid="uid://cp5s3s4288xe1"]

[ext_resource type="Script" uid="uid://dinc5cmf640eg" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://dg6qdx5ayqrnd" path="res://scenes/table.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b5dw6pxhwl8k6" path="res://scenes/pool_ball.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://di0kdgc8h1g3h" path="res://scenes/cue_ball.tscn" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://cl43l1bl6c7pg" path="res://scenes/cue.tscn" id="4_jyhfs"]
[ext_resource type="Theme" uid="uid://cs0dacdtiio8v" path="res://themes/my_theme.tres" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://d0im6kejls5kn" path="res://scripts/power_bar.gd" id="6_tefeu"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tefeu"]
properties/0/path = NodePath("Game/PowerBar:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Game/PowerBar:value")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Main" type="Node"]
script = ExtResource("1_o5qli")
ball_scene = ExtResource("2_sugp2")
place_cue_ball_scene = ExtResource("3_o6xl0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 339)

[node name="Game" type="Node" parent="."]

[node name="Table" parent="Game" instance=ExtResource("2_0wfyh")]
unique_name_in_owner = true

[node name="Cue" parent="Game" instance=ExtResource("4_jyhfs")]
unique_name_in_owner = true
visible = false

[node name="PowerBar" type="ProgressBar" parent="Game"]
unique_name_in_owner = true
visible = false
z_index = 1
offset_left = 107.0
offset_top = 106.0
offset_right = 207.0
offset_bottom = 136.0
theme = ExtResource("5_tbgi4")
show_percentage = false
script = ExtResource("6_tefeu")

[node name="PottedPanel" type="Panel" parent="Game"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -360.0
offset_right = 240.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_tbgi4")

[node name="PottedGrid" type="GridContainer" parent="Game/PottedPanel"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -586.0
offset_top = -18.0
offset_right = 182.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_tbgi4")
columns = 15

[node name="DisplayPanel" type="Panel" parent="Game"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1265.0
offset_top = -1249.0
offset_right = 545.0
offset_bottom = -1106.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_tbgi4")

[node name="NameLabel" type="Label" parent="Game/DisplayPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 41.0
offset_top = 27.0
offset_right = 312.0
offset_bottom = 119.0
theme_type_variation = &"Title"
text = "Current Player: "

[node name="BallType" type="Label" parent="Game/DisplayPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1505.0
offset_top = 27.0
offset_right = 1776.0
offset_bottom = 119.0
theme_type_variation = &"Title"
text = "Ball Type: None"
horizontal_alignment = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Game"]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_tefeu")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b5dw6pxhwl8k6", "uid://di0kdgc8h1g3h", "uid://cl43l1bl6c7pg")
spawn_path = NodePath("..")

[connection signal="shoot" from="Game/Cue" to="." method="_on_cue_shoot"]
